main/default/objects/Achievement__c/Achievement__c.object-meta.xml
<CustomObject>
    <label>Achievement</label>
    <nameField>
        <label>Achievement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Achievements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>