main/default/objects/Achievement__c/fields/Acquired_Image__c.field-meta.xml
<CustomField>
    <fullName>Acquired_Image__c</fullName>
    <label>Acquired Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>