main/default/objects/Achievement__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>Expired achievements will not be displayed in the users profile page</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>