main/default/objects/Achievement__c/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the achievement won&apos;t be displayed to external users</inlineHelpText>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>