main/default/objects/Achievement__c/fields/Override_Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>Override_Completed_Status__c</fullName>
    <inlineHelpText>Overriding the completed status will make the Achievement Assignments go to the defined &quot;override status&quot; instead of &quot;Acquired&quot;. It&apos;s up to you move to the &quot;Acquired&quot;  status once this feature is used.</inlineHelpText>
    <label>Override Completed Status</label>
    <picklist>
        <picklistValues>
            <fullName>In Review</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>