main/default/objects/Achievement__c/fields/Override_URL__c.field-meta.xml
<CustomField>
    <fullName>Override_URL__c</fullName>
    <inlineHelpText>Specify a value if you want users to go to this URL when clicking the Achievement Image. This can be used to redirect to a custom page where you manage additional steps before changing the status of the Achievement to &quot;Acquired&quot;.</inlineHelpText>
    <label>Override URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>