main/default/objects/Achievement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <picklist>
        <picklistValues>
            <fullName>Achievements</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Certifications</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>