main/default/objects/Achievement__c/fields/Work_Badge_Id__c.field-meta.xml
<CustomField>
    <fullName>Work_Badge_Id__c</fullName>
    <label>Work Badge Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>