main/default/objects/Achievement__c/fields/Work_Badge_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Work_Badge_Image_URL__c</fullName>
    <label>Work Badge Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>