main/default/objects/Achievement__c/fields/Work_Badge_Message__c.field-meta.xml
<CustomField>
    <fullName>Work_Badge_Message__c</fullName>
    <label>Work.com Badge Message</label>
    <type>TextArea</type>
</CustomField>